# paint-by-number

./: .gitignore  README.md  pbn.py  pyproject.toml  requirements.txt
palettes/: palette1.txt  palette2.txt  palette3.txt  palette4.txt  palette5.txt  palette_list.txt
pbn/: __init__.py  cli.py  core.py  datatypes.py  output.py  palette.py
pbn/algorithms/: __init__.py  enums.py  registry.py
pbn/algorithms/assignment/: __init__.py  average_nearest.py  base.py
pbn/algorithms/postprocessing/: __init__.py  base.py  merge_segments.py  no_postprocessing.py  smooth_boundaries.py
pbn/algorithms/preprocessing/: __init__.py  base.py  floyd_steinberg.py  no_preprocessing.py
pbn/algorithms/quantization/: __init__.py  base.py  nearest.py
pbn/algorithms/rendering/: __init__.py  base.py  colored.py
pbn/algorithms/segmentation/: __init__.py  base.py  grid_segmentation.py  kmeans.py  lab_watershed.py  voronoi.py  watershed.py
pbn/quantization_algorithms/: __init__.py  base.py  floyd_steinberg.py  nearest.py  registry.py
