[build-system]
requires = ["setuptools>=65.5.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "paint-by-number"
version = "0.0.0"
description = "A paint-by-number image quantization tool."
authors = [{name = "Kasper van Maasdam"}]
readme = "README.md"
requires-python = ">=3.10"
license = "GPL-3.0-or-later"
license-files = ["LICENSE"]
dependencies = [
    "pillow>=12.0.0,<=12.99.99",
    "numpy>=2.4.0,<=2.99.99",
    "scikit-image>=0.26.0,<=0.99.99"
]

[project.scripts]
pbn = "pbn.cli:main"

[tool.setuptools]
packages = ["pbn"]
